# box_utils

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
include/: greedynms.hpp
src/box_utils/: __init__.py  converter.py  nms.py
src/box_utils/_c/: __init__.py
src/c/: nmsmodule.cpp  nmsmodule.hpp
tests/: test_c_nms_onnx_ex.py  test_nms.py
