[metadata]
name = box_utils
version = 0.0.1
description = Yet another implementation of box-NMS.
url = https://github.com/hozmi/box_utils
project_urls =
    Source = https://github.com/hozmi/box_utils
    Tracker = https://github.com/hozmi/box_utils/issues
author = hozmi
author_email = hozmi[@]users.noreply.github.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
package_dir =
     = src
include_package_data = true
python_requires = >= 3.6
install_requires =
    numpy >= 1.7.0

[options.packages.find]
where = src
